force-app/main/default/objects/Monthly_Beat_Plan__c/Monthly_Beat_Plan__c.object-meta.xml
<CustomObject>
    <label>Monthly Beat Plan</label>
    <nameField>
        <displayFormat>MBP-{0000}</displayFormat>
        <label>Monthly Beat Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Beat Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>