force-app/main/default/objects/Monthly_Beat_Plan__c/fields/Achieved_target__c.field-meta.xml
<CustomField>
    <fullName>Achieved_target__c</fullName>
    <label>Achieved target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>