force-app/main/default/objects/Monthly_Beat_Plan__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <formula>MONTH( Start_Date__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>