force-app/main/default/objects/Monthly_Beat_Plan__c/fields/Month_year__c.field-meta.xml
<CustomField>
    <fullName>Month_year__c</fullName>
    <label>Month year</label>
    <length>20</length>
    <type>Text</type>
</CustomField>