force-app/main/default/objects/Monthly_Beat_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_User__c</columns>
    <columns>Year__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Month_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>