force-app/main/default/objects/Monthly_Beat_Plan__c/listViews/Mukesh_Beat_Plan.listView-meta.xml
<ListView>
    <fullName>Mukesh_Beat_Plan</fullName>
    <columns>NAME</columns>
    <columns>Sales_User__c</columns>
    <columns>Year__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_User__c</field>
        <operation>equals</operation>
        <value>Mukesh Sharma</value>
    </filters>
    <label>Mukesh Beat Plan</label>
</ListView>